# volunteer-dataset-generator

./: ANALIZA.md  README.md  pyproject.toml  volunteer_analysis_notebook.ipynb  volunteer_analyzer.py  volunteer_dataset_generator.py
