[project]
name = "volunteer-dataset-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "seaborn>=0.13.2",
]
